--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <wasm>
     <meta charset="utf-8" />
     <title>Fruity</title>
+    <link data-trunk rel="css" href="public/simple.min.css" />
+    <link data-trunk rel="css" href="public/mathquill.css">
+
+    <link data-trunk rel="rust" data-wasm-opt="z">
+
+    <script data-trunk src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
+    <script data-trunk src="public/mathquill.min.js"></script>
+    <link data-trunk rel="copy-dir" href="public" />
   </head>
   <body></body>
 </html>
