switch from rcas to citrus

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <wasm>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width">
     <title>Fruity</title>
     <link data-trunk rel="css" href="public/simple.min.css" />
-    <link data-trunk rel="css" href="public/mathquill.css">
+    <link data-trunk rel="css" href="public/mathquill.css" />
 
     <link data-trunk rel="rust" data-wasm-opt="z">
 
